--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
       min-width: 400px !important;
       background: #eee;
       display: block !important;
+      z-index: 0;
     }
     .hide {
       display: none !important;
@@ -532,13 +533,16 @@
           updateUIForRole(role);
           document.getElementById('loginContainer').style.display = 'none';
           document.getElementById('mainApp').classList.remove('hide'); // Show the map
+          // Only call initMap once after login
           setTimeout(function() {
-            initMap();
-            setTimeout(function() {
-              if (window.mapInstance && window.mapInstance.invalidateSize) {
-                window.mapInstance.invalidateSize();
-              }
-            }, 300);
+            if (!window.mapInstance) {
+              initMap();
+              setTimeout(function() {
+                if (window.mapInstance && window.mapInstance.invalidateSize) {
+                  window.mapInstance.invalidateSize();
+                }
+              }, 300);
+            }
           }, 300);
         }).catch(function(error) {
           document.getElementById('loginError').textContent = 'Could not fetch user role: ' + error.message;
