--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   </div>
 
   <!-- MAIN APP CONTAINER -->
-  <div id="mainApp" class="hide" style="height:calc(100vh - 56px); width:100vw; position:relative; overflow:hidden;">
+  <div id="mainApp" class="hide" style="height:90vh; width:100vw; position:fixed; top:0; left:0; z-index:1; overflow:hidden;">
     <div id="map" style="height:100%; width:100%;"></div>
   </div>
 
